fix: mobile navbar backdrop blur, children visibility and menu size during before and after

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,6 @@
     top: 0;
     left: 0;
     bottom: 0;
-    z-index: 1;
   }
 
 .mobile-navbar {
@@ -17,15 +16,6 @@
     bottom: 0;
   }
  
-
-  .mobile-navbar-list,
-  .mobile-navbar-item-list {
-  }
-  
-  .mobile-navbar-list {
-    margin: auto;
-  }
-  
 
   .hamburger-button {
     outline: none;
@@ -38,7 +28,6 @@
     transform: translate(100%,100%);
     border-radius: 50%;
     background: transparent;
-    z-index: 1;
   }
   
   .refresh {
@@ -77,79 +66,3 @@
 body {
   background: #0f1117;
 }
-
-
-/* body {
-  min-height: 100vh;
-  background: #212534;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  box-sizing: border-box;
-}
-
-
-.card{
-  width: 100%;
-  height: var(--card-height);
-}
-
-.card:hover {
-  color: rgb(88 199 250 / 100%);
-  transition: color 1s;
-}
-.card:hover:before, .card:hover:after {
-  animation: none;
-  opacity: 0;
-}
-
-
-.card::before {
-  content: "";
-  border-radius: 8px;
-  background-image: linear-gradient(
-    var(--rotate)
-    , #5ddcff, #3c67e3 43%, #4e00c2);
-    position: absolute;
-    z-index: -1;
-    animation: spin 2.5s linear infinite;
-}
-
-.card::after {
-  position: absolute;
-  content: "";
-  top: calc(var(--card-height) / 6);
-  left: 0;
-  right: 0;
-  z-index: -1;
-  height: 100%;
-  width: 100%;
-  margin: 0 auto;
-  transform: scale(0.8);
-  filter: blur(calc(var(--card-height) / 6));
-  background-image: linear-gradient(
-    var(--rotate)
-    , #5ddcff, #3c67e3 43%, #4e00c2);
-    opacity: 0.5;
-  transition: opacity .5s;
-  animation: spin 8.5s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    --rotate: 0deg;
-  }
-  100% {
-    --rotate: 360deg;
-  }
-}
-
-a {
-  color: #212534;
-  text-decoration: none;
-  font-family: sans-serif;
-  font-weight: bold;
-  margin-top: 2rem;
-} */
